# automation_nanobot

./: .gitignore  CLAUDE.md  NOTAS_AUTONOMO.md  README.md  RELATORIO_NOITE_2026-04-22.md  pyproject.toml
.claude/: settings.json
.claude/commands/: check-tier0.md  feedback-stats.md  rag-query.md  run-pipeline-once.md  test-suite.md
scripts/: capture_sei_selectors.py  check_drive_freshness.py  check_drive_status.ps1  download_sei_pops.sh  generate_manifest.py  mark_unread.py  mark_unread_estagios.py  peek_last_draft.py  register_pipeline_tasks.ps1  reprocess_one.py  run_scheduled_once.bat  sei_drive.py  siga_capture_estagios.py  smoke_agir_estagios.py  smoke_create_process_live.py  smoke_writer_live_e2e.py  sync_from_drive.ps1  sync_to_drive.ps1
scripts/manual/: README.md  debug_sei_login.py  peek_last_draft.py
ufpr_automation/: .env.example  ARCHITECTURE.md  COMPLETED_TASKS.md  INICIO.md  INTENTS_PARA_REVISAO.md  PLANO_EXPANSAO_TIER0_E_ROLE.md  PLANO_SCHEDULER_WINDOWS_TASK.md  RAG_INGESTION_REPORT.md  README.md  SDD_CLAUDE_CODE_AUTOMATIONS.md  SDD_SEI_SELECTOR_CAPTURE.md  TASKS.md  __init__.py  __main__.py  _guard_selectors.py  _selectors_loader.py  _session_browser.py  orchestrator.py  requirements.txt  scheduler.py
ufpr_automation/ClaudeCowork/: CLAUDE.md
ufpr_automation/aflow/: __init__.py  cli.py  evaluator.py  optimizer.py  topologies.py
ufpr_automation/agent_sdk/: __init__.py  debug_classification.py  feedback_chat.py  intent_drafter.py  procedures_staleness.py  rag_auditor.py  runner.py  siga_grounder.py
ufpr_automation/agents/: __init__.py  agir.py  pensar.py  perceber.py
ufpr_automation/attachments/: __init__.py  extractor.py
ufpr_automation/base_conhecimento/: FichaDoCurso.txt  NAVEGACAO_SEI.md  NAVEGACAO_SIGA.md
ufpr_automation/cli/: __init__.py  commands.py
ufpr_automation/config/: __init__.py  settings.py
ufpr_automation/core/: __init__.py  models.py
ufpr_automation/docs/: architecture_mermaid.md
ufpr_automation/dspy_modules/: __init__.py  metrics.py  modules.py  optimize.py  signatures.py
ufpr_automation/feedback/: __init__.py  cli.py  reflexion.py  store.py  web.py
ufpr_automation/gmail/: __init__.py  client.py  thread.py
ufpr_automation/graph/: __init__.py  browser_pool.py  builder.py  fleet.py  nodes.py  nodes_actions.py  state.py
ufpr_automation/graphrag/: README.md  __init__.py  client.py  enrich.py  retriever.py  schema.py  seed.py  templates.py
ufpr_automation/llm/: __init__.py  client.py  router.py
ufpr_automation/rag/: __init__.py  (+6 more)
(+119 files in other folders)
