[project]
name = "ufpr-automation"
version = "0.1.4.post5"
description = "UFPR Design Gráfico — automação de triagem de e-mails da secretaria (Gmail/OWA + LangGraph + RAG + Neo4j + SEI/SIGA)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Lucas Sorrentino"}
]
keywords = ["ufpr", "email-automation", "langgraph", "rag", "neo4j"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "litellm>=1.82.1,<2.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-json-logger>=4.0.0,<5.0.0",
    "python-telegram-bot[socks]>=22.6,<23.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
rag = [
    "pymupdf>=1.25.0,<2.0.0",
    "lancedb>=0.20.0",
    "sentence-transformers>=4.0.0",
    "langchain-text-splitters>=0.3.0,<1.0.0",
    "pyarrow>=18.0.0",
    "streamlit>=1.40.0",
    "scikit-learn>=1.5.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]
marco2 = [
    "langgraph>=1.1,<2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "apscheduler>=3.10.0,<4.0.0",
]
marco3 = [
    "neo4j>=5.20.0,<6.0.0",
    "playwright>=1.50.0,<2.0.0",
]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "ufpr_automation/**/*.py",
    "ufpr_automation/**/*.md",
    "ufpr_automation/**/*.yaml",
    "ufpr_automation/**/*.yml",
    "ufpr_automation/**/*.json",
    "ufpr_automation/**/*.txt",
]

[tool.hatch.build.targets.wheel]
packages = ["ufpr_automation"]

[tool.hatch.build.targets.sdist]
include = [
    "ufpr_automation/",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["ufpr_automation/tests"]
filterwarnings = [
    "ignore::RuntimeWarning:_pytest",
    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
]
